--- a/React-Typescript/React-ts-useReducer/package.json
+++ b/React-Typescript/React-ts-useReducer/package.json
@@ -11,12 +11,10 @@
   },
   "dependencies": {
     "@types/bootstrap": "^5.2.10",
-    "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
